[tool.poetry]
name = "zhs_crawler"
version = "0.1.0"
description = ""
authors = ["Leo Kocks <kocks.leo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.8"
pandas = "^1.3.0"
click = "^8.0.1"
requests = "^2.26.0"
loguru = "^0.5.3"
python-dotenv = "^0.18.0"
beautifulsoup4 = "^4.9.3"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
pylint = "^2.9.5"
mypy = "^0.910"
pytest = "^6.2.4"
flake8 = "^3.9.2"
reorder_python_imports = "^2.5.0"
"pre.commit" = "^2.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
